# array-api-compat

./: .buildinfo  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  array-api-compat-1.15.0.dev0-pyh4616a5c_0.conda  changelog.html  cupy-skips.txt  cupy-xfails.txt  dask-skips.txt  dask-xfails.txt  dask.array-xfails.txt  genindex.html  helper-functions.html  index.html  meson.build  numpy-1-21-xfails.txt  numpy-1-22-xfails.txt  numpy-1-26-xfails.txt  numpy-dev-xfails.txt  numpy-xfails.txt  objects.inv  paddle-skips.txt  paddle-xfails.txt  pixi.toml  pyproject.toml  pytorch-xfails.txt  requirements-dev.txt  ruff.toml  search.html  searchindex.js  setup.py  supported-array-libraries.html  tensorflow-skips.txt  tensorflow-xfails.txt  test_cupy.sh  torch-skips.txt  torch-xfails.txt
.github/: dependabot.yml
.github/workflows/: array-api-tests-cupy.yml  array-api-tests-dask.yml  array-api-tests-jax.yml  array-api-tests-numpy-1-21.yml  array-api-tests-numpy-1-22.yml  array-api-tests-numpy-1-26.yml  array-api-tests-numpy-dev.yml  array-api-tests-numpy-latest.yml  array-api-tests-numpy.yml  array-api-tests-paddle.yml  array-api-tests-tensorflow.yml  array-api-tests-torch-f64.yml  array-api-tests-torch.yml  array-api-tests.yml  dependabot-auto-merge.yml  docs-build.yml  docs-deploy.yml  docs.yml  mlx-tests.yml  publish-package.yml  ruff.yml  tests.yml
_sources/: changelog.md.txt  helper-functions.rst.txt  index.md.txt  supported-array-libraries.md.txt
_sources/dev/: implementation-notes.md.txt  index.md.txt  releasing.md.txt
_static/: custom.css  documentation_options.js
array_api_compat/: __init__.py  _dask_ci_shim.py  _internal.py
array_api_compat/common/: __init__.py  _aliases.py  _fft.py  _helpers.py  _linalg.py  _typing.py
array_api_compat/cupy/: __init__.py  _aliases.py  _info.py  _typing.py  fft.py  linalg.py
array_api_compat/dask/: _aliases.py
array_api_compat/dask/array/: __init__.py  _aliases.py  _info.py  _meta.py  fft.py  linalg.py
array_api_compat/jax/: __init__.py
array_api_compat/numpy/: __init__.py  _aliases.py  _info.py  _typing.py  fft.py  linalg.py
array_api_compat/paddle/: __init__.py  _aliases.py  _info.py  fft.py  linalg.py
array_api_compat/sparse/: __init__.py
array_api_compat/torch/: __init__.py  _aliases.py  _info.py  _typing.py  fft.py  linalg.py
dev/: implementation-notes.html  index.html  releasing.html  special-considerations.html  tests.html
docs/: changelog.md  conf.py  differences.md  helper-functions.md  helper-functions.rst  index.md  index.rst  supported-array-libraries.md
docs/_static/: custom.css
docs/dev/: implementation-notes.md  index.md  releasing.md  special-considerations.md  tests.md
numpy_array_api_compat/: __init__.py  _aliases.py  _helpers.py  _internal.py  linalg.py
numpy_array_api_compat/common/: _aliases.py  _helpers.py  linalg.py
numpy_array_api_compat/cupy/: __init__.py
numpy_array_api_compat/numpy/: __init__.py  _aliases.py  _helpers.py
src/array_api_compat/: __init__.py
src/array_api_compat/common/: _helpers.py
src/array_api_compat/mlx/: __init__.py  _aliases.py  _info.py  _typing.py  fft.py  linalg.py
src/array_api_compat/numpy/: _aliases.py
src/array_api_compat/tensorflow/: __init__.py  _aliases.py  _info.py  _typing.py  fft.py  linalg.py
src/array_api_compat/torch/: _aliases.py
tests/: __init__.py  _helpers.py  meson.build  test_all.py  test_array_namespace.py  test_at.py  test_common.py  test_copies_or_views.py  test_cupy.py  test_dask.py  test_get_namespace.py  test_helpers.py  test_isdtype.py  test_jax.py  test_mlx.py  test_no_dependencies.py  test_numpy.py  test_torch.py  test_vendoring.py
vendor_test/: meson.build  uses_cupy.py  uses_dask.py  uses_numpy.py  uses_paddle.py  uses_torch.py
vendor_tests/: meson.build  test_vendoring.py  uses_cupy.py  uses_dask.py  uses_numpy.py  uses_torch.py
