py.install_sources([
    '__init__.py',
    '_helpers.py',
    'test_all.py',
    'test_array_namespace.py',
    'test_common.py',
    'test_copies_or_views.py',
    'test_cupy.py',
    'test_dask.py',
    'test_isdtype.py',
    'test_jax.py',
    'test_no_dependencies.py',
    'test_torch.py',
    'test_vendoring.py',
  ],
  subdir: 'array_api_compat/tests'
)
